*SVN*

* Added automated rewriting of the shebang lines on installs through the gem rails command #379 [Manfred Stienstra]

* Fixed that generated action_mailers doesnt need to require the action_mailer since thats already done in the environment #382 [Lucas Carlson]

* Fixed dependency management to happen in a unified fashion for Active Record and Action Pack using the new Dependencies module. This means that
  the environment options needs to change from:
  
    Before in development.rb:
      ActionController::Base.reload_dependencies = true  
      ActiveRecord::Base.reload_associations     = true
    
    Now in development.rb:
      Dependencies.mechanism = :load

    Before in production.rb and test.rb:
      ActionController::Base.reload_dependencies = false
      ActiveRecord::Base.reload_associations     = false

    Now in production.rb and test.rb:
      Dependencies.mechanism = :require

* Added ActionMailer::Base.deliver_method = :test to the test environment so that mail objects are available in ActionMailer::Base.deliveries
  for functional testing.

* Added protection for creating a model through the generators with a name of an existing class, like Thread or Date.
  It'll even offer you a synonym using wordnet.princeton.edu as a look-up. No, I'm not kidding :) [Florian Gross]


*0.9.2*

* Fixed CTRL-C exists from the Breakpointer to be a clean affair without error dumping [Kent Sibilev]

* Fixed "rake stats" to work with sub-directories in models and controllers and to report the code to test ration [Scott Baron]

* Added that Active Record associations are now reloaded instead of cleared to work with the new const_missing hook in Active Record.

* Added graceful handling of an inaccessible log file by redirecting output to STDERR with a warning #330 [rainmkr]

* Added support for a -h/--help parameter in the generator #331 [Ulysses]
